--- a/SpotHero_iOS_Partner_SDK/Assets/Main.storyboard
+++ b/SpotHero_iOS_Partner_SDK/Assets/Main.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="mRm-nn-PCg">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="16A320" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="mRm-nn-PCg">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -281,6 +281,88 @@
                                     <constraint firstAttribute="trailing" secondItem="00R-A9-LV4" secondAttribute="trailing" id="ulT-LG-tob"/>
                                 </constraints>
                             </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="64R-U6-acf">
+                                <rect key="frame" x="0.0" y="400" width="600" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="s1r-pB-kPa"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="DWS-1b-GJh" customClass="SpotCardCollectionViewFlowLayout" customModule="SpotHero_iOS_Partner_SDK" customModuleProvider="target">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SpotCardCellID" id="pFA-jL-zmI" customClass="SpotCardCollectionViewCell" customModule="SpotHero_iOS_Partner_SDK" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="43" width="225" height="115"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="225" height="115"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uoX-5v-crH">
+                                                    <rect key="frame" x="8" y="8" width="161" height="27"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lGu-UY-rpK">
+                                                    <rect key="frame" x="8" y="35" width="161" height="27"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lYi-oY-Q5A">
+                                                    <rect key="frame" x="177" y="8" width="40" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="40" id="RAl-R3-xlJ"/>
+                                                        <constraint firstAttribute="height" constant="40" id="WE8-oz-K5u"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3jD-ib-d5I">
+                                                    <rect key="frame" x="0.0" y="70" width="225" height="45"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="45" id="66Y-jh-m0d"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Button">
+                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="didTapBuyButton:" destination="pFA-jL-zmI" eventType="touchUpInside" id="t8b-D3-tGi"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="lYi-oY-Q5A" firstAttribute="leading" secondItem="uoX-5v-crH" secondAttribute="trailing" constant="8" id="2Em-xI-brz"/>
+                                            <constraint firstAttribute="trailing" secondItem="3jD-ib-d5I" secondAttribute="trailing" id="GQk-ll-mo9"/>
+                                            <constraint firstItem="uoX-5v-crH" firstAttribute="top" secondItem="pFA-jL-zmI" secondAttribute="top" constant="8" id="Gpw-5w-YSe"/>
+                                            <constraint firstItem="lGu-UY-rpK" firstAttribute="height" secondItem="uoX-5v-crH" secondAttribute="height" id="LC5-H7-fFl"/>
+                                            <constraint firstItem="lGu-UY-rpK" firstAttribute="leading" secondItem="pFA-jL-zmI" secondAttribute="leading" constant="8" id="MbT-7Z-wHa"/>
+                                            <constraint firstAttribute="trailing" secondItem="lYi-oY-Q5A" secondAttribute="trailing" constant="8" id="SfL-wp-ngd"/>
+                                            <constraint firstItem="3jD-ib-d5I" firstAttribute="top" secondItem="lGu-UY-rpK" secondAttribute="bottom" constant="8" id="ZYQ-Ne-Y41"/>
+                                            <constraint firstItem="uoX-5v-crH" firstAttribute="leading" secondItem="pFA-jL-zmI" secondAttribute="leading" constant="8" id="eBa-TA-Ft2"/>
+                                            <constraint firstItem="lGu-UY-rpK" firstAttribute="top" secondItem="uoX-5v-crH" secondAttribute="bottom" id="feY-Kc-1q7"/>
+                                            <constraint firstItem="3jD-ib-d5I" firstAttribute="leading" secondItem="pFA-jL-zmI" secondAttribute="leading" id="lkX-AA-n3h"/>
+                                            <constraint firstAttribute="bottom" secondItem="3jD-ib-d5I" secondAttribute="bottom" id="uU9-c3-8Ni"/>
+                                            <constraint firstItem="lYi-oY-Q5A" firstAttribute="leading" secondItem="lGu-UY-rpK" secondAttribute="trailing" constant="8" id="usE-Am-coD"/>
+                                            <constraint firstItem="lYi-oY-Q5A" firstAttribute="top" secondItem="pFA-jL-zmI" secondAttribute="top" constant="8" id="vuL-0q-2og"/>
+                                        </constraints>
+                                        <size key="customSize" width="225" height="115"/>
+                                        <connections>
+                                            <outlet property="accessibleParkingImageView" destination="lYi-oY-Q5A" id="N1E-MX-bd2"/>
+                                            <outlet property="buyButton" destination="3jD-ib-d5I" id="v5p-Mh-VNf"/>
+                                            <outlet property="spotInfoLabel" destination="lGu-UY-rpK" id="aP0-JJ-TvP"/>
+                                            <outlet property="streetAddressLabel" destination="uoX-5v-crH" id="hnh-r2-r1H"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="Vax-OI-bt8" id="W2v-MX-biE"/>
+                                    <outlet property="delegate" destination="Vax-OI-bt8" id="f03-TM-iJP"/>
+                                </connections>
+                            </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zfM-Xw-6w1" userLabel="Date Picker View" customClass="DatePickerView" customModule="SpotHero_iOS_Partner_SDK" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="400" width="600" height="200"/>
                                 <subviews>
@@ -358,19 +440,17 @@
                             <constraint firstAttribute="trailing" secondItem="37V-ku-ODQ" secondAttribute="trailing" constant="20" id="Wnb-L3-ErZ"/>
                             <constraint firstItem="SrH-hR-dUQ" firstAttribute="centerX" secondItem="74f-zj-sek" secondAttribute="centerX" id="XaW-Dl-hiD"/>
                             <constraint firstItem="zfM-Xw-6w1" firstAttribute="leading" secondItem="74f-zj-sek" secondAttribute="leading" id="aIN-e6-wW9"/>
+                            <constraint firstItem="EcZ-Kj-xzb" firstAttribute="top" secondItem="64R-U6-acf" secondAttribute="bottom" id="bWS-65-Uxl"/>
+                            <constraint firstItem="64R-U6-acf" firstAttribute="leading" secondItem="74f-zj-sek" secondAttribute="leading" id="bYo-Xf-TKW"/>
                             <constraint firstAttribute="trailing" secondItem="nEN-Yc-ckc" secondAttribute="trailing" id="cvr-jp-0PY"/>
                             <constraint firstItem="nEN-Yc-ckc" firstAttribute="top" secondItem="2XB-0q-QOj" secondAttribute="bottom" id="e5U-fH-ez1"/>
                             <constraint firstItem="37V-ku-ODQ" firstAttribute="top" secondItem="2XB-0q-QOj" secondAttribute="bottom" constant="8" id="iTE-7t-dXl"/>
+                            <constraint firstAttribute="trailing" secondItem="64R-U6-acf" secondAttribute="trailing" id="pVx-Ax-SUA"/>
                             <constraint firstItem="37V-ku-ODQ" firstAttribute="leading" secondItem="74f-zj-sek" secondAttribute="leading" constant="20" id="rzZ-Xn-oDh"/>
                             <constraint firstAttribute="trailing" secondItem="zfM-Xw-6w1" secondAttribute="trailing" id="yts-Lh-Xvr"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Find Parking" id="QQS-us-8wq">
-                        <barButtonItem key="leftBarButtonItem" title="Temp Checkout button" id="15V-hi-rKn">
-                            <connections>
-                                <action selector="tempCheckoutButtonPressed:" destination="Vax-OI-bt8" id="OkD-gD-9Gb"/>
-                            </connections>
-                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Close" id="Pda-yU-gs7">
                             <connections>
                                 <action selector="closeButtonPressed:" destination="Vax-OI-bt8" id="j0v-UM-LDr"/>
@@ -388,6 +468,7 @@
                         <outlet property="searchContainerView" destination="lqQ-xQ-L7J" id="SIA-V9-TjC"/>
                         <outlet property="searchContainerViewHeightConstraint" destination="14r-MT-7qT" id="cw0-Qx-byZ"/>
                         <outlet property="searchSpotsButton" destination="SrH-hR-dUQ" id="f9H-D8-iTw"/>
+                        <outlet property="spotCardCollectionView" destination="64R-U6-acf" id="N8b-cB-Yd0"/>
                         <outlet property="timeSelectionView" destination="00R-A9-LV4" id="VCz-Sm-EMU"/>
                         <segue destination="tyi-hk-4VD" kind="show" identifier="showCheckout" id="fn7-95-kYM"/>
                     </connections>
