--- a/SpotHero_iOS_Partner_SDK/Assets/GooglePredictionTableFooter.xib
+++ b/SpotHero_iOS_Partner_SDK/Assets/GooglePredictionTableFooter.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="16A320" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -11,9 +11,21 @@
             <rect key="frame" x="0.0" y="0.0" width="379" height="43"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="powered_by_google_on_white" translatesAutoresizingMaskIntoConstraints="NO" id="ZL4-bW-RMa">
-                    <rect key="frame" x="8" y="8" width="363" height="27"/>
-                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Cv-iz-p0i">
+                    <rect key="frame" x="0.0" y="0.0" width="379" height="43"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="powered_by_google_on_white" translatesAutoresizingMaskIntoConstraints="NO" id="ZL4-bW-RMa">
+                            <rect key="frame" x="8" y="8" width="363" height="27"/>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="ZL4-bW-RMa" secondAttribute="bottom" constant="8" id="Ec9-6o-u03"/>
+                        <constraint firstItem="ZL4-bW-RMa" firstAttribute="top" secondItem="2Cv-iz-p0i" secondAttribute="top" constant="8" id="I0a-3y-xK6"/>
+                        <constraint firstItem="ZL4-bW-RMa" firstAttribute="leading" secondItem="2Cv-iz-p0i" secondAttribute="leading" constant="8" id="gnF-7u-X82"/>
+                        <constraint firstAttribute="trailing" secondItem="ZL4-bW-RMa" secondAttribute="trailing" constant="8" id="wPn-I0-1T0"/>
+                    </constraints>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ULy-aJ-xSR">
                     <rect key="frame" x="0.0" y="0.0" width="379" height="1"/>
                     <color key="backgroundColor" white="0.89932885906040272" alpha="1" colorSpace="calibratedWhite"/>
@@ -23,13 +35,13 @@
                 </view>
             </subviews>
             <constraints>
-                <constraint firstItem="ZL4-bW-RMa" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="5C5-VE-kgf"/>
-                <constraint firstAttribute="bottom" secondItem="ZL4-bW-RMa" secondAttribute="bottom" constant="8" id="7tZ-op-tQc"/>
+                <constraint firstItem="2Cv-iz-p0i" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="D5z-n2-TMe"/>
+                <constraint firstAttribute="bottom" secondItem="2Cv-iz-p0i" secondAttribute="bottom" id="DAb-Y2-e74"/>
                 <constraint firstAttribute="trailing" secondItem="ULy-aJ-xSR" secondAttribute="trailing" id="R0I-lK-1jw"/>
                 <constraint firstItem="ULy-aJ-xSR" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="VM8-pw-FOh"/>
-                <constraint firstItem="ZL4-bW-RMa" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="ao1-2Z-xz8"/>
                 <constraint firstItem="ULy-aJ-xSR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="hDk-6N-Ubi"/>
-                <constraint firstAttribute="trailing" secondItem="ZL4-bW-RMa" secondAttribute="trailing" constant="8" id="hfW-HG-KHi"/>
+                <constraint firstAttribute="trailing" secondItem="2Cv-iz-p0i" secondAttribute="trailing" id="irb-EX-kRZ"/>
+                <constraint firstItem="2Cv-iz-p0i" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="zJS-n2-ymA"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="322.5" y="475.5"/>
