--- a/SpotHero_iOS_Partner_SDK/Assets/GooglePredictionTableHeader.xib
+++ b/SpotHero_iOS_Partner_SDK/Assets/GooglePredictionTableHeader.xib
@@ -1,9 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="16A320" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -12,12 +11,6 @@
             <rect key="frame" x="0.0" y="0.0" width="367" height="47"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" text="BEST MATCHES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="siU-4F-YaF">
-                    <rect key="frame" x="8" y="15" width="105" height="17"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ibl-ik-Dfo">
                     <rect key="frame" x="0.0" y="46" width="367" height="1"/>
                     <color key="backgroundColor" white="0.89990562084026848" alpha="1" colorSpace="calibratedWhite"/>
@@ -25,12 +18,31 @@
                         <constraint firstAttribute="height" constant="1" id="poN-tt-ybJ"/>
                     </constraints>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GBe-j7-h0T">
+                    <rect key="frame" x="0.0" y="0.0" width="367" height="47"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" text="BEST MATCHES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="siU-4F-YaF">
+                            <rect key="frame" x="8" y="15" width="105" height="17"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="siU-4F-YaF" firstAttribute="centerY" secondItem="GBe-j7-h0T" secondAttribute="centerY" id="5Gl-ih-GGr"/>
+                        <constraint firstItem="siU-4F-YaF" firstAttribute="leading" secondItem="GBe-j7-h0T" secondAttribute="leading" constant="8" id="jjo-z6-O8J"/>
+                    </constraints>
+                </view>
             </subviews>
             <constraints>
                 <constraint firstItem="ibl-ik-Dfo" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="027-am-cuY"/>
-                <constraint firstItem="siU-4F-YaF" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="3wo-aa-NcY"/>
-                <constraint firstItem="siU-4F-YaF" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="SQA-Sl-U5I"/>
+                <constraint firstItem="GBe-j7-h0T" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="R8X-WK-Lkg"/>
                 <constraint firstAttribute="trailing" secondItem="ibl-ik-Dfo" secondAttribute="trailing" id="TMl-v0-Pkb"/>
+                <constraint firstAttribute="trailing" secondItem="GBe-j7-h0T" secondAttribute="trailing" id="Xpj-pN-9KL"/>
+                <constraint firstItem="GBe-j7-h0T" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Zke-dE-9EA"/>
+                <constraint firstAttribute="bottom" secondItem="GBe-j7-h0T" secondAttribute="bottom" id="bq3-54-1jB"/>
                 <constraint firstAttribute="bottom" secondItem="ibl-ik-Dfo" secondAttribute="bottom" id="lij-7o-H0U"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
