--- a/SpotHero_iOS_Partner_SDK/Assets/Main.storyboard
+++ b/SpotHero_iOS_Partner_SDK/Assets/Main.storyboard
@@ -20,8 +20,10 @@
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" rotateEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nEN-Yc-ckc">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <gestureRecognizers/>
                                 <connections>
                                     <outlet property="delegate" destination="Vax-OI-bt8" id="ZEN-Ra-i6D"/>
+                                    <outletCollection property="gestureRecognizers" destination="JfO-Bm-qra" appends="YES" id="Nph-Qu-UhQ"/>
                                 </connections>
                             </mapView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="37V-ku-ODQ">
@@ -489,6 +491,11 @@
                 <tapGestureRecognizer id="Krv-xQ-Ko3">
                     <connections>
                         <action selector="startViewTapped:" destination="00R-A9-LV4" id="cNg-dd-4jS"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="JfO-Bm-qra">
+                    <connections>
+                        <action selector="didTapMapView:" destination="Vax-OI-bt8" id="izt-au-DLM"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
