--- a/SpotHero_iOS_Partner_SDK/Assets/Main.storyboard
+++ b/SpotHero_iOS_Partner_SDK/Assets/Main.storyboard
@@ -421,9 +421,8 @@
                                 </connections>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SrH-hR-dUQ">
-                                <rect key="frame" x="228" y="214" width="145" height="45"/>
+                                <rect key="frame" x="20" y="214" width="560" height="45"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="145" id="YUe-44-cmq"/>
                                     <constraint firstAttribute="height" constant="45" id="mKW-EU-iCy"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -437,7 +436,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="SrH-hR-dUQ" firstAttribute="leading" secondItem="74f-zj-sek" secondAttribute="leading" constant="20" id="3KO-Uv-Mt7"/>
                             <constraint firstItem="SrH-hR-dUQ" firstAttribute="top" secondItem="37V-ku-ODQ" secondAttribute="bottom" constant="8" id="4Cn-Wa-3F2"/>
+                            <constraint firstAttribute="trailing" secondItem="SrH-hR-dUQ" secondAttribute="trailing" constant="20" id="9hQ-tf-6NR"/>
                             <constraint firstItem="EcZ-Kj-xzb" firstAttribute="top" secondItem="nEN-Yc-ckc" secondAttribute="bottom" id="Eta-77-iSQ"/>
                             <constraint firstItem="nEN-Yc-ckc" firstAttribute="leading" secondItem="74f-zj-sek" secondAttribute="leading" id="Vao-aZ-gnQ"/>
                             <constraint firstItem="EcZ-Kj-xzb" firstAttribute="top" secondItem="zfM-Xw-6w1" secondAttribute="bottom" id="VzY-Ya-tjU"/>
